examples/tests/compute/invalid/string/main.cue
package testing

#dagger: {
	compute: "whatever"
}
